--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^8.2.5"
   },
   "dependencies": {
+    "animejs": "^3.2.0",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.5.0",
     "electron-reload": "^1.5.0",
